# weather_alerting_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/src/: __init__.py  commons.py  config.py  get_logger.py  handlers.py
app/src/open_meteo/: __init__.py  open_meteo.py
docker/: Dockerfile
